syntax = "proto3";


message Value {
    oneof data {
        string varchar = 1;
        int32 int32 = 2;
        int64 int64 = 3;
        uint32 unsigned32 = 4;
        uint64 unsigned64 = 5;
        float float32 = 6;
        double float64 = 7;
        bool boolean = 8;
    }
}
